# SimPla

./: .clang-format  .cproject  .gitignore  .project  .pydevproject  .tags  .travis.yml  CMakeLists.txt  ChangeLog  INSTALL.md  LICENSE  Note_ColdWave_Disp_multispec.mw  README.md  cold_fluid.h  cpplint.py  create_context.cpp  deltaf.lyx  dummy.cpp  index.html  local_conf.cmake  params.json
CMake/SAMRAI_Patch/: CMakeLists.txt  FindM4.cmake  SAMRAIPatch.cmake
applications/: 2omega.cpp  CMakeLists.txt  WriteXDMF.cpp  demo.cpp  ggauge.cpp  simpla.cpp  test.cpp  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test6.cpp  test7.cpp  test_allocator.cpp  test_bitop.cpp  test_h5.c  test_nullptr.cpp  test_octree.cpp  test_vistor.cpp
applications/contexts/: CMakeLists.txt  context.cpp  context.h  context_cartesian.cpp  context_cylindical.cpp  context_cylindrical.cpp  context_factory.h  explicit_em.cpp  explicit_em.h  explicit_em_impl.h  rect_mesh.h
applications/ecrf/: CMakeLists.txt  ecrf.cpp
applications/field_solver/: README.md  field_solver.h  implicitPushE.h  pml.h
applications/fokker_planck/: CMakeLists.txt  lhw.cpp
applications/modules/: basemodule.h
applications/obsolete/: test1.cpp  test3.cpp  test5.cpp  test_allocator.cpp  test_stdcxx_allcoator.cpp
applications/particle_solver/: fluid_cold_engine.h  particle_factory.h  pic_engine_default.h  pic_engine_deltaf.h  pic_engine_deltaf2.h  pic_engine_full.h  pic_engine_fullf.h  pic_engine_ggauge.h  pic_engine_implicit.h  register_particle.h
applications/pic/: ggauge.h  init_load.h  pic.cpp  pic_delta_f.h  pic_engine_ggauge.h  pic_gauge.h
applications/solver/: CMakeLists.txt  solver.cpp  solver.h
core/: .gitignore  CMakeLists.txt  common.h  dummy.h  simpla_defs.h  sp_config.h  tmp
core/application/: CMakeLists.txt  application.cpp  application.h  application_main.cpp  context.cpp  context.h  context_base.h  context_main.cpp  logo.cpp  logo.h  schedule.h  sp_object.cpp  sp_object.h  task.h  use_case.cpp  use_case.h  use_case_main.cpp
core/base/: Attribute.h  CMakeLists.txt  DataObject.cpp  DataObject.h  LifeClick.h  Object.cpp  Object.h  Patch.h  SpMacro.h  attribute.h  patch.h  s_object.h
core/containers/: container.h  container.md  container_cache.h  container_dense.h  container_pool.h  container_save_cache.h  container_sparse.h  container_traits.h  iterator_cycle.h  sp_iterator.h  sp_iterator_index_base.h  sp_iterator_mapped.h  sp_iterator_sequence.h  sp_range.h
core/data_interface/: CMakeLists.txt  data_interface.h  data_interface.md  data_set.cpp  data_set.h  data_space.cpp  data_space.h  data_structure.h  data_type.cpp  data_type.h
core/data_model/: CMakeLists.txt  DataSet.cpp  DataSet.h  DataSpace.cpp  DataSpace.h  DataType.cpp  DataType.h  DataTypeExt.h  attribute.h  data_view.h  dataset.cpp  dataset.h  dataset_traits.h  dataspace.cpp  dataspace.h
core/data_representation/: data_interface.h  data_set.cpp  data_set.h  data_space.cpp  data_space.h  data_type.cpp  data_type.h
core/data_structure/: CMakeLists.txt  container_dense.h  container_pool.h  container_traits.h  data_set.h  data_space.cpp  data_space.h  data_structure.h  data_type.cpp  data_type.h  dataspace.cpp  dataspace.h  iterator_cycle.h
core/dataset/: CMakeLists.txt  dataset.cpp  dataset.h  dataspace.cpp  dataspace.h  datatype.cpp  datatype.h  datatype_ext.h  dataview.h  storage.cpp
core/design_pattern/: constant_ops.h  design_pattern.h  expression_template.h  factory.h  memory_pool.cpp  memory_pool.h  singleton_holder.h  visitor.h
core/diff_geometry/: CMakeLists.txt  calculus.h  diff_geometry.h  diff_geometry_common.h  domain.h  domain_traits.h  dummy_manifold.h  dummy_mesh.h  fetl.h  manifold.h  mesh.h  simple_mesh.h
core/fetl/: CMakeLists.txt  cache.h  dummy_field.h  fetl.h  fetl.md  fetl_Cylindrical_kz_test.cpp  fetl_test.h  fetl_test1.h  fetl_test4.h  field.md  field_constant.h  field_rw_cache.h  field_update_ghosts.h  field_vector_ops.h  load_field.h  save_field.h
core/field/: .tags_sorted_by_file  CMakeLists.txt  Field.h  FieldBase.cpp  FieldBase.h  FieldDense.h  FieldExpression.h  base_field.h  cache.h  calculus.h  domain_dummy.h  fetl.h  fetl_Cylindrical_kz_test.cpp  fetl_test2.h  fetl_test3.h  fetl_test4.h  fetl_vector_calculus_test.h  field.h  field.md  field_associative.h  field_basic_algerbra_Cartesian_test.cpp  field_basic_algerbra_test.cpp  field_basic_algerbra_test.h  field_comm.h  field_constant.h  field_constraint.h  field_continue.h  field_dense.h  field_expression.h  field_fieldconstraint.h  field_function.h  field_io_test.cpp  field_map.h  field_old.h  field_patch.h  field_rw_cache.h  field_sequence.h  field_shared_ptr.h  field_sparse.h  field_test.cpp  (+14 more)
core/geometry/: CMakeLists.txt  CoordinateSystem.h  GeoAlgorithm.h  GeoObject.h  algorithm.h  boost_gemetry_adapted.h  box.h  chains.h  coordinate_system.h  csCartesian.h  csCylindrical.h  cs_cartesian.h  cs_cylindrical.h  cube.h  cut_cell.h  geo_algorithm.h  geo_object.h  geometric_algorithm.h  geometry.h  implicit_function.h  load_model.h  manifold.h  model.h  (+8 more)
example/: CMakeLists.txt  RF.cpp  animation.py  demo.lua  demo2.lua  demo_gfile.lua  icrf.lua  mesh.xmf  mhd.cpp  simpla.xmf  simpla.xml  test.lua  test.py
external_project/: .gitignore  CMakeLists.txt
sp_lite/: .cproject  .project  Boris.h  BorisYee.c  BorisYee.cu  BorisYee.h  BorisYeeKernel.cu  BorisYeeMain.c  BorisYeeMain.cu  CMakeLists.txt  CMakeLists.txt.disable  FDTDBoris.c  FDTDBoris.h  FDTDBorisKernel.cu  FDTDBorisMain.c  README.md  spAlogorithm.h  spContext.h  spDataModel.c  spDataModel.h  spDataType.c  spDataType.h  spFDTD.h  spFDTD_device.h  spField.c  spField.cu  spField.h  spIO.c  spIO.cpp  spIO.h  spIOStream.c  spIOStream.h  spMPI.c  spMPI.cpp  spMPI.h  spMesh.c  spMesh.cu  spMesh.h  spMeshSFCZOrder.h  spMisc.c  (+36 more)
src/: CMakeLists.txt  dummy.cpp  simpla.cpp  simpla_defs.h  sp_capi.cpp  sp_capi.h  sp_config.h  sp_cuda_config.h  sp_cwrap.cpp  sp_cwrap.h  sp_def.h
test/: CMakeLists.txt
tools/: CMakeLists.txt  GEqdsk.cpp  GEqdsk.h  geqdsk_convert.cpp  geqdsk_to_mesh.cpp  geqdsk_xdmf.cpp
(+4000 files in other folders)
