cmake_minimum_required(VERSION 2.8)
cmake_policy(SET CMP0028 NEW)

PROJECT(SimPla CXX C)

INCLUDE(local_conf.cmake)

INCLUDE(${PROJECT_SOURCE_DIR}/CMake/utils.cmake)

SET(CMAKE_VERBOSE_MAKEFILE ON)

SET(BUILD_SHARED_LIBS OFF)

SET(PREFIX ${CMAKE_CXX_COMPILER_ID}-${CMAKE_BUILD_TYPE})

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)

SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

SET(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMake ${CMAKE_MODULE_PATH})

MESSAGE(STATUS "Using C++ Compiler ${CMAKE_CXX_COMPILER_ID} ")


SET(CMAKE_C_FLAGS "-std=c11 -fopenmp  ")

SET(CMAKE_CXX_FLAGS "-std=c11 -fopenmp  ")


if (${CMAKE_CXX_COMPILER_ID} STREQUAL "Clang")
    SET(CMAKE_CXX_FLAGS "-std=c++11  -fcolor-diagnostics   -ftemplate-backtrace-limit=0  -fPIC ")
    SET(CMAKE_Fortran_COMPILER gfortran)
elseif (${CMAKE_CXX_COMPILER_ID} STREQUAL "Intel")
    SET(CMAKE_CXX_FLAGS "-std=c++11 -fopenmp -fPIC ")
else ()
    SET(CMAKE_CXX_FLAGS "-std=c++11 -fopenmp  -fPIC  ")
endif ()

INCLUDE(CTest)

ENABLE_TESTING()

FIND_PACKAGE(GTest)

ADD_CUSTOM_TARGET(alltest)

FIND_PACKAGE(Boost REQUIRED)

FIND_PACKAGE(MPI REQUIRED)
IF (MPI_FOUND)
    INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
    ADD_DEFINITIONS(-DOMPI_SKIP_MPICXX)
    SET(SKIP_MPICXX "OMPI_SKIP_MPICXX")
ENDIF (MPI_FOUND)

FIND_PACKAGE(TBB)
IF (TBB_FOUND)
    INCLUDE_DIRECTORIES(${TBB_INCLUDE_DIRS})
    SET(HAVE_TBB 1)
ENDIF (TBB_FOUND)

SET(HDF5_PREFER_PARALLEL ON)
SET(HDF5_USE_STATIC_LIBRARIES OFF)

FIND_PACKAGE(HDF5 1.8 COMPONENTS C HL REQUIRED)
IF (HDF5_FOUND)
    INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
    ADD_DEFINITIONS(-DHAVE_HDF5)
ENDIF (HDF5_FOUND)


#FIND_PACKAGE(BLAS)
#
#FIND_PACKAGE(LAPACK)

FIND_PACKAGE(Lua 5.2 REQUIRED)
IF (Lua_FOUND)
    INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
ENDIF (Lua_FOUND)


if (NOT IS_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/simpla)
    FILE(MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/simpla)
endif (NOT IS_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/include/simpla)

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/include/SIMPLA_config.h.in
        ${CMAKE_CURRENT_BINARY_DIR}/include/simpla/SIMPLA_config.h @ONLY)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR}/include/)
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)

add_subdirectory(src)
add_subdirectory(example)
add_subdirectory(tools)
add_subdirectory(docs)

add_subdirectory(scenario)
#add_subdirectory(sp_lite)

# workaround for CLion 1.0.x
FILE(GLOB_RECURSE clion_all_headers ${CMAKE_SOURCE_DIR}/*.h)
add_executable(all_clion ${clion_all_headers} src/dummy.h src/dummy.cpp tools/geqdsk/geqdsk_convert.cpp)
