
ADD_SUBDIRECTORY(misc)

ADD_SUBDIRECTORY(general_field_op)
ADD_SUBDIRECTORY(mhd)
ADD_SUBDIRECTORY(em)
ADD_SUBDIRECTORY(em_cuda)
ADD_SUBDIRECTORY(em_tokamak)

ADD_SUBDIRECTORY(probe_particle)
ADD_SUBDIRECTORY(pic)
ADD_SUBDIRECTORY(geometry)
ADD_SUBDIRECTORY(model)

#ADD_SUBDIRECTORY(modeling)
#ADD_SUBDIRECTORY(chombo)
