
ADD_SUBDIRECTORY(SimpleMaxwell)
ADD_SUBDIRECTORY(MultiDomain)
ADD_SUBDIRECTORY(EmbeddedBoundary)

ADD_SUBDIRECTORY(tokamak)
#ADD_SUBDIRECTORY(em)
#ADD_SUBDIRECTORY(multi_block)
#ADD_SUBDIRECTORY(mhd_test)
#IF(CUDA_FOUND)
#ADD_SUBDIRECTORY(cuda_test)
#ENDIF(CUDA_FOUND)

#add_subdirectory(Modeling)
#add_subdirectory(step2meshkit)
#add_subdirectory(em_tokamak)