#cmake_minimum_required(VERSION 2.8)
#SET(CMAKE_VERBOSE_MAKEFILE ON)
#
#PROJECT(sp_lite C CXX)
#
#FIND_PACKAGE(MPI)


IF (MPI_FOUND)
    INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
ENDIF (MPI_FOUND)

SET(HDF5_PREFER_PARALLEL ON)
SET(HDF5_USE_STATIC_LIBRARIES OFF)

FIND_PACKAGE(HDF5 1.8 COMPONENTS C HL)

IF (HDF5_FOUND)
    INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
    IF (HDF5_IS_PARALLEL)
        ADD_DEFINITIONS(-DUSE_PARALLEL_IO -DH5_HAVE_PARALLEL)
    ENDIF (HDF5_IS_PARALLEL)
ENDIF (HDF5_FOUND)

FIND_PACKAGE(CUDA 7.5 REQUIRED)

SET(CUDA_HOST_COMPILER ${CMAKE_C_COMPILER})

MESSAGE(${CUDA_INCLUDE_DIRS})

INCLUDE_DIRECTORIES(${CUDA_INCLUDE_DIRS})

SET(CUDA_SEPARABLE_COMPILATION ON)
ADD_DEFINITIONS(-DUSE_CUDA -DENABLE_SOA -DNUMBER_OF_THREADS_PER_BLOCK=256)
FILE(GLOB sp_lite_SRC_CU ./*.cu)
CUDA_ADD_LIBRARY(sp_lite_cu ${sp_lite_SRC_CU})


FILE(GLOB sp_lite_SRC ./*.c)
ADD_EXECUTABLE(sp_lite ${sp_lite_SRC})
TARGET_LINK_LIBRARIES(sp_lite sp_capi sp_lite_cu)
