#cmake_minimum_required(VERSION 2.8)
#SET(CMAKE_VERBOSE_MAKEFILE ON)
#
#PROJECT(sp_lite C )
#

SET(ENABLE_CUDA TRUE)

FIND_PACKAGE(MPI REQUIRED)

INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})


SET(HDF5_PREFER_PARALLEL ON)
SET(HDF5_USE_STATIC_LIBRARIES OFF)

FIND_PACKAGE(HDF5 1.8 COMPONENTS C HL REQUIRED)

INCLUDE_DIRECTORIES(${HDF5_INCLUDE_DIRS})
IF (HDF5_IS_PARALLEL)
    ADD_DEFINITIONS(-DUSE_PARALLEL_IO -DH5_HAVE_PARALLEL)
ENDIF (HDF5_IS_PARALLEL)

add_subdirectory(device)

FILE(GLOB sp_lite_SRC ./*.c)

ADD_EXECUTABLE(sp_boris_mt ${sp_lite_SRC})
TARGET_LINK_LIBRARIES(sp_boris_mt sp_capi sp_lite_openmp)
target_compile_options(sp_boris_mt PUBLIC -fopenmp)
target_link_libraries(sp_boris_mt -fopenmp)

IF (ENABLE_CUDA)
    ADD_EXECUTABLE(sp_boris_gpu ${sp_lite_SRC})
    TARGET_LINK_LIBRARIES(sp_boris_gpu sp_capi sp_lite_cuda)
ENDIF (ENABLE_CUDA)