#IF (MAKE_TOOLS )
#FIND_PACKAGE(OCE REQUIRED)

#FIND_PACKAGE(OpenCASCADE 6.9 )
#IF (OpenCASCADE_FOUND)
#    SET(OCCT_INCLUDE_DIRS ${OpenCASCADE_INCLUDE_DIRS})
#    SET(OCCT_LIBRARIES ${OpenCASCADE_LIBRARIES})
#    MESSAGE(" -- OpenCASCADE Found: ${OCCT_LIBRARIES} ; INCLUDE:${OpenCASCADE_INCLUDE_DIR} ")
#ELSE (OpenCASCADE_FOUND)
#ENDIF ()
FIND_PACKAGE(OCE 0.17 REQUIRED)

IF (OCE_FOUND)
    MESSAGE(" -- OCE Found:${OCE_LIBRARIES} INCLUDE:${OCE_INCLUDE_DIRS}")
ENDIF (OCE_FOUND)

#IF (OCCT_FOUND)
#    #    SET(OCCT_INCLUDE_DIR ${OCCT_INCLUDE_DIR})
#    #    SET(OCCT_LIBRARIES ${OCCT_LIBRARIES})
#    MESSAGE(" -- OpenCASCADE_LIBRARIES Found: ${OpenCASCADE_LIBRARIES}")
#    MESSAGE(" -- OCE_LIBRARIES Found: ${OCE_LIBRARIES}")
#ENDIF (OCCT_FOUND)

FIND_PACKAGE(MOAB REQUIRED)
IF (MOAB_FOUND)
    MESSAGE(" -- MOAB Found: ${MOAB_LIBRARIES};  INCLUDE: ${MOAB_INCLUDE_DIRS}")
ENDIF (MOAB_FOUND)

FIND_PACKAGE(MESHKIT REQUIRED)

FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Core Gui X11Extras Widgets)

INCLUDE_DIRECTORIES(${MOAB_INCLUDE_DIRS} ${MESHKIT_INCLUDE_DIRS}
        ${OCE_INCLUDE_DIRS} ${Qt5Application_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5X11Extras_INCLUDE_DIRS})

ADD_EXECUTABLE(geqdsk_convert geqdsk_convert.cpp)

TARGET_LINK_LIBRARIES(geqdsk_convert ${OCE_LIBRARIES} ${MOAB_LIBRARIES} Qt5::Core Qt5::Gui Qt5::Widgets)


#ENDIF (MAKE_TOOLS)