#IF (MAKE_TOOLS )
SET(OCCT_PREFER_COMMUNITY_EDITION ON)

#IF (OCCT_PREFER_COMMUNITY_EDITION)
FIND_PACKAGE(OCE 0.17 REQUIRED)
SET(OCCT_INCLUDE_DIRS ${OCE_INCLUDE_DIRS})
SET(OCCT_LIBRARIES ${OCE_LIBRARIES})
LINK_DIRECTORIES(${OpenCASCADE_LIBRARY_DIR})
MESSAGE("-- OCE Found:${OCE_LIBRARIES} INCLUDE:${OCE_INCLUDE_DIRS}")

#ELSE (OCCT_PREFER_COMMUNITY_EDITION)
#    FIND_PACKAGE(OpenCASCADE 6.9.1 REQUIRED)
#    SET(OCCT_INCLUDE_DIRS ${OpenCASCADE_INCLUDE_DIR})
#    SET(OCCT_LIBRARIES ${OpenCASCADE_LIBRARIES})
#    MESSAGE("-- OCCT Found:${OpenCASCADE_LIBRARIES} INCLUDE:${OpenCASCADE_INCLUDE_DIR}")
#ENDIF (OCCT_PREFER_COMMUNITY_EDITION)


FIND_PACKAGE(MOAB REQUIRED)
IF (MOAB_FOUND)
    MESSAGE(" -- MOAB Found: ${MOAB_LIBRARIES};  INCLUDE: ${MOAB_INCLUDE_DIRS}")
ENDIF (MOAB_FOUND)

FIND_PACKAGE(MeshKit REQUIRED)

FIND_PACKAGE(Qt5 REQUIRED COMPONENTS Core Gui X11Extras Widgets)

INCLUDE_DIRECTORIES(${MOAB_INCLUDE_DIRS} ${MESHKIT_INCLUDE_DIRS}
        ${OCE_INCLUDE_DIRS} ${Qt5Application_INCLUDE_DIRS} ${Qt5Widgets_INCLUDE_DIRS} ${Qt5X11Extras_INCLUDE_DIRS})

ADD_EXECUTABLE(geqdsk_convert geqdsk_convert.cpp)

TARGET_LINK_LIBRARIES(geqdsk_convert ${OCE_LIBRARIES} ${MOAB_LIBRARIES} Qt5::Core Qt5::Gui Qt5::Widgets)


#ENDIF (MAKE_TOOLS)
